Corregida la ortografia

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a href="#services" class="nav__link">Principios</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#contact" class="nav__link">Comunicate</a>
+                        <a href="#contact" class="nav__link">Comunícate</a>
                     </li>
 
                     <i class='bx bx-toggle-left change-theme' id="theme-button"></i>
@@ -43,7 +43,7 @@
                 <i class='bx bx-grid-alt'></i>
             </div>
 
-            <a href="#" class="button button__header open-modal">Cuestionate</a>
+            <a href="#" class="button button__header open-modal">Cuestiónate</a>
         </nav>
     </header>
 
@@ -374,9 +374,8 @@
                     <!-- <h1 class="home__title">Seguridad</h1> -->
                     <div class="home__space"></div>
                     <p class="home__description">Poesismo es una idea que brinda una serie de herramientas para
-                        descubrirnos, conocernos y aceptarnos.
-                        El enfoque de nuestro grupo se da desde las multiples disciplinas de la ciencia y de la
-                        experiencia humana.
+                        descubrirnos, conocernos y aceptarnos. El enfoque de nuestro grupo se da desde las múltiples
+                        disciplinas de la ciencia y de la experiencia humana.
                     </p>
                     <div class="app__buttons">
                         <a href="#" class="open-modal button button-flex">
@@ -402,7 +401,7 @@
                         </div>
                         <div class="container-toronto">
                             <img class="toronto" src="public/assets/images/poeferia.jpg" alt="Toronto, Canadá">
-                            <div class="overlay">Mayeutica a civiles</div>
+                            <div class="overlay">Mayéutica a civiles</div>
                         </div>
 
 
@@ -466,7 +465,7 @@
                         de modo que sepamos de donde proviene nuestra percepcion de la realidad.
                     </p>
                     <p class="about__description move-from-right">
-                        Únete a nuestra comunidad para compartir ideas y seguir nutriendonos de experiencias.
+                        Únete a nuestra comunidad para compartir ideas y seguir nutriéndonos de experiencias.
                     </p>
                     <div class="about__contact move-from-right">
                         <a href="#contact ">Únete a nuestra comunidad</a>
@@ -494,8 +493,8 @@
                         <img class="img_feature img__security" src="public/assets/images/brainPoesism.svg" alt="">
                         <div class="qualities qualities__1">
                             <p class="title__qualities">Autogobierno</p>
-                            <p class="description_qualities">La libertad esta en poder elegir como nos sentimos, sin
-                                importar el estimulo</p>
+                            <p class="description_qualities">La libertad está en poder elegir cómo nos sentimos, sin
+                                importar el estímulo</p>
                             <!-- y siempre mostramos la información a terceros con su consentimiento -->
                         </div>
                     </div>
@@ -514,7 +513,7 @@
                             alt="">
                         <div class="qualities qualities__1">
                             <p class="title__qualities">Autoconocimiento</p>
-                            <p class="description_qualities">Solo conocemos a los demas y al mundo en la medida en que
+                            <p class="description_qualities">Solo conocemos a los demás y al mundo en la medida en que
                                 nos conocemos a nosotros mismos</p>
                         </div>
                     </div>
@@ -544,12 +543,10 @@
                             <h3 class="services__subtitle2">ECOSISTEMA</h3>
                         </div>
                         <div class="card__body card__body--back">
-                            <p class="services__description">Vivimos en un mundo altamente atropocentrista, un mundo que
-                                ha perdido la Capacidad
-                                general de reconocer las relaciones de dependencia que tiene el ser humano con todos los
-                                sistemas que lo rodean.
-                                El mundo no es nuestro, el mundo es la red de relaciones que se tejen entre los
-                                ecosistemas.
+                            <p class="services__description">Vivimos en un mundo altamente antropocentrista, un mundo
+                                que ha perdido la capacidad general de reconocer las relaciones de dependencia que tiene
+                                el ser humano con todos los sistemas que lo rodean. El mundo no es nuestro; el mundo es
+                                la red de relaciones que se tejen entre los ecosistemas.
                             </p>
                         </div>
                 </article>
@@ -561,11 +558,10 @@
                             <h3 class="services__subtitle2">CUESTIONAMIENTO</h3>
                         </div>
                         <div class="card__body card__body--back">
-                            <p class="services__description">No dar por sentado ni siquiera las leyes fisicas, pues la
-                                realidad es un objeto incognosible, solo
-                                podemos dar por sentado el hecho de que hay una experiencia en nosotros. De este
-                                postulado tan abstracto, los invitamos al control de sus emociones
-                                y el cuestionamiento de las mismas; asi poder entenderlas.
+                            <p class="services__description">No dar por sentado ni siquiera las leyes físicas, pues la
+                                realidad es un objeto incognoscible; solo podemos dar por sentado el hecho de que hay
+                                una experiencia en nosotros. De este postulado tan abstracto, los invitamos al control
+                                de sus emociones y el cuestionamiento de las mismas, así poder entenderlas.
                             </p>
                         </div>
                     </div>
@@ -575,14 +571,15 @@
                         <div class="card__body card__body--front">
                             <img src="public/assets/images/servipoe (7).png" alt="Fondo de tarjeta" class="card__image">
                             <div class="overlay"></div>
-                            <h3 class="services__subtitle2">INDAGACION</h3>
+                            <h3 class="services__subtitle2">INDAGACIÓN</h3>
                         </div>
                         <div class="card__body card__body--back">
-                            <p class="services__description">Los tiempos actuales parece que nos obligan a
-                                especializarnos en un solo saber, pero la invitacion es a
-                                indagar en las formas que subyacen a lo que es aparente, a entender las ciencias, las
-                                sensaciones y los fenomenos desde sus bloques fundamentales.
-                                De esta manera eludimos construir una imagen rigida de la realidad.
+                            <p class="services__description">Los tiempos actuales parecen que nos obligan a
+                                especializarnos en un solo saber, pero la invitación es a indagar en las formas que
+                                subyacen a lo que es aparente, a entender las ciencias, las sensaciones y los fenómenos
+                                desde sus bloques fundamentales. De esta manera eludimos construir una imagen rígida de
+                                la realidad.
+
                             </p>
                         </div>
                     </div>
@@ -592,14 +589,13 @@
                         <div class="card__body card__body--front">
                             <img src="public/assets/images/servipoe (2).png" alt="Fondo de tarjeta" class="card__image">
                             <div class="overlay"></div>
-                            <h3 class="services__subtitle2">ATENCION PLENA</h3>
+                            <h3 class="services__subtitle2">ATENCIÓN PLENA</h3>
                         </div>
                         <div class="card__body card__body--back">
                             <p class="services__description">Combatimos la sobredosis de información a la que estamos
-                                expuestos en todo momento, la atención plena es la Capacidad
-                                de escuchar lo que tu cuerpo te pide y ser consciente del "¿por qué?", es la capacidad
-                                de atender a tus deseos y formar una voluntad que no se distrae
-                                frente a cualquier estimulo.
+                                expuestos en todo momento. La atención plena es la capacidad de escuchar lo que tu
+                                cuerpo te pide y ser consciente del "¿por qué?", es la capacidad de atender a tus deseos
+                                y formar una voluntad que no se distrae frente a cualquier estímulo.
                             </p>
                         </div>
                     </div>
@@ -609,13 +605,13 @@
                         <div class="card__body card__body--front">
                             <img src="public/assets/images/servipoe (3).png" alt="Fondo de tarjeta" class="card__image">
                             <div class="overlay"></div>
-                            <h3 class="services__subtitle2">TECNOLOGIA</h3>
+                            <h3 class="services__subtitle2">TECNOLOGÍA</h3>
                         </div>
                         <div class="card__body card__body--back">
                             <p class="services__description">Creemos que las herramientas que hemos creado se pueden
-                                usar de modo que la comunicacion entre las personas sea más ostensiva,
-                                se pueden usar para disminuir la ambiguedad en lo que se dice y se pueden usar para
-                                potenciar nuestras habilidades de cara a solucionar problemas.
+                                usar de modo que la comunicación entre las personas sea más ostensiva, se pueden usar
+                                para disminuir la ambigüedad en lo que se dice y se pueden usar para potenciar nuestras
+                                habilidades de cara a solucionar problemas.
                             </p>
                         </div>
                     </div>
@@ -629,10 +625,9 @@
                         </div>
                         <div class="card__body card__body--back">
                             <p class="services__description">El concepto de emancipación es el proceso por medio del
-                                cual el ser es capaz de entender el provenir de sus voluciones y tomar la desición
-                                consciente
-                                de como sentirse en un momento dado. Es la capacidad de estar por encima a la voluntad
-                                de el ambiente, der ser hacia dentro lo que al ser le plazca</p>
+                                cual el ser es capaz de entender el provenir de sus voliciones y tomar la decisión
+                                consciente de cómo sentirse en un momento dado. Es la capacidad de estar por encima de
+                                la voluntad del ambiente, de ser hacia dentro lo que al ser le plazca.</p>
                         </div>
                     </div>
                 </article>
@@ -676,7 +671,7 @@
                 <div class="contact__container grid">
                     <div class="contact__content">
                         <h2 class="section__title-center">
-                            Contactanos<br>ahora
+                            Contáctanos<br>ahora
                         </h2>
                         <p class="contact__description">Suscribete al buzon de Poesismo.</p>
                         <div class="container__input">
@@ -715,7 +710,7 @@
         <div class="footer__container container grid">
             <div class="footer__content">
                 <a href="#" class="footer__logo">Poesismo</a>
-                <p class="footer__description">Ayudanos a difundir nuestra idea <br> Se parte del cambio</p>
+                <p class="footer__description">Ayúdanos a difundir nuestra idea<br>Sé parte del cambio</p>
             </div>
 
             <!-- <div class="footer__content">
