Corregida la ortografia2

--- a/index.html
+++ b/index.html
@@ -680,9 +680,10 @@
                                 class="lastname input">
                         </div>
                         <input type="email" name="email" placeholder="Ingresa tu correo" class="email input" id="email">
+                        <textarea class="input" placeholder="Cuéntanos de ti..." id="answer" name="mensaje"
+                            rows="3" required></textarea>
 
                     </div>
-
                     <!-- <ul class="contact__content grid">
                         <li class="contact__address">Teléfono: <span class="contact__information">8131128625</span>
                         </li>
@@ -697,7 +698,7 @@
                     </ul> -->
 
                     <div class="contact__content">
-                        <button type="submit" class="button">Suscribirme</button>
+                        <button type="submit" class="button">Enviar</button>
 
                     </div>
                 </div>
