Corregi el modal de las preguntas

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             <div class="about__container grid">
 
                 <div class="image-container">
-                    <img class="svg__img svg__color about__img move-from-left my-image" id="imagen_aleatoria"
+                    <img class="svg__img svg__color about__img app__img move-from-left my-image" id="imagen_aleatoria"
                         viewBox="0 0 312 236" src="public/assets/images/poeimage3.JPG">
                 </div>
 
@@ -828,7 +828,7 @@
                     });
             });
             form_question.addEventListener("submit", function (evento) {
-                evento.preventDefault();
+                // evento.preventDefault();
 
                 const modal = document.getElementById("myModal");
                 const loader = document.querySelector(".loader");
