Cambios para mejorar la UX en display de celular o movil Co-authored-by: HALA-Nodoo <HALA-Nodoo@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -449,10 +449,10 @@
         <section class="about section container" id="about">
             <div class="about__container grid">
 
-                <div class="image-container">
-                    <img class="svg__img svg__color about__img app__img move-from-left my-image" id="imagen_aleatoria"
-                        viewBox="0 0 312 236" src="public/assets/images/poeimage3.JPG">
-                </div>
+
+                <img class="svg__img svg__color about__img app__img move-from-left my-image" id="imagen_aleatoria"
+                    viewBox="0 0 312 236" src="public/assets/images/poeimage3.JPG">
+
 
                 <div class="about__data">
                     <h2 class="section__title-center move-from-right">Un proyecto cultural que quiere impulsar el
@@ -520,7 +520,7 @@
 
                 </div>
                 <div class="app__views  ">
-                    <iframe width="560" height="315" src="" title="YouTube video player" frameborder="0"
+                    <iframe src="" title="YouTube video player" frameborder="0"
                         class="move-from-right video-frame" id="video_aleatorio"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
@@ -680,8 +680,8 @@
                                 class="lastname input">
                         </div>
                         <input type="email" name="email" placeholder="Ingresa tu correo" class="email input" id="email">
-                        <textarea class="input" placeholder="Cuéntanos de ti..." id="answer" name="mensaje"
-                            rows="3" required></textarea>
+                        <textarea class="input" placeholder="Cuéntanos de ti..." id="answer" name="mensaje" rows="3"
+                            required></textarea>
 
                     </div>
                     <!-- <ul class="contact__content grid">
