--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="public/css/styles.css">
-    <title>POESISMO</title>
+    <title>POESISMO - En pro del autoconocimiento</title>
 </head>
 
 <body>
