Fixed the issue with the modal form, now every question maps to different entry in the google form

--- a/index.html
+++ b/index.html
@@ -339,12 +339,12 @@
                 <a href="#" id="close-modal" class="close-icon"><i class="material-icons">close</i></a>
                 <img href="#" src="public/assets/images/simbolo_poesista.svg" alt="" width="150px">
                 <h2>PREGUNTA SEMANAL</h2>
-                <!-- <p id="countdown"></p> -->
+                <p id="countdown"></p>
                 <form id="weekly-question-form"
                     action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSd_NLDI7pHiKC8yOYCZXnEUH-8CJA_vPz9m_c957YUrJti3qg/formResponse">
                     <div class="form-group">
                         <label id="question-label" for="answer"></label>
-                        <textarea class="input2" placeholder="Danos tu opinión..." id="answer" name="entry.400511360"
+                        <textarea class="input2" placeholder="Danos tu opinión..." id="answer-weekly" name=""
                             rows="5" required></textarea>
                     </div>
 
@@ -378,7 +378,7 @@
                         disciplinas de la ciencia y de la experiencia humana.
                     </p>
                     <div class="app__buttons">
-                        <a href="#" class="open-modal button button-flex">
+                        <a href="#" class="open-modal button button-flex nuestra-propuesta">
                             <i class='bx bxs-hand button__icon'></i> Nuestra propuesta
                         </a>
                     </div>
